<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android1="http://schemas.android.com/tools">


    <item
        android:title="@string/title_of_cart_icon_in_toolbar"
        android:icon="@drawable/ic_action_cart"
        android:id="@+id/view_cart"
        app:showAsAction="always" />

    <item
        android:title="@string/title_of_app_logo_icon_in_toolbar"
        android:icon="@drawable/light_green_hat_only_for_menu"
        android:id="@+id/app_logo_for_menu"
        app:showAsAction="always" />


    <item
        android:title="@string/title_of_search_icon_in_toolbar"
        android:icon="@drawable/ic_action_search"
        android:id="@+id/search_hats"
        app:showAsAction="always" />

</menu>